--- a/styles/style.css
+++ b/styles/style.css
@@ -213,7 +213,9 @@ span{
 }
 
 #main-content{
-    margin-top: 25px;
+    margin-top: 100px;
+    margin-bottom: 75px;
+    font-size: 20px;
     width: 80%;
     display: flex;
     justify-content: center;
@@ -221,6 +223,61 @@ span{
     letter-spacing: 20px;
     word-break: break-all;
     padding: 0 30px;
+}
+
+.lessons-container{
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    flex-direction: column;
+}
+
+.lesson-wrapper{
+    width: 40%;
+    padding: 20px 0;
+    background-color: #A5C9CA;
+    margin: 10px 0;
+    border-radius: 10px;
+    border: 2px solid #395B64;
+    transition: all 300ms linear;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+}
+
+.lesson-title-container{
+    width: 60%;
+}
+
+.chars-preview-wrapper{
+    position: absolute;
+    display: none;
+    right: 0;
+    width: 100px;
+    height: 50px;
+    opacity: 0.5;
+    padding-right: 10px;
+    justify-content: flex-end;
+    align-items: center;
+    transition: all 300ms linear;
+    font-size: 12px;
+}
+
+.lesson-wrapper ion-icon{
+    font-size: 36px;
+    margin: 0 25px;
+}
+
+.lesson-wrapper:hover{
+    cursor: pointer;
+    border-radius: 5px;
+    box-shadow: 3px 3px 15px #2C3333;
+    margin-left: 5px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -231,6 +288,12 @@ span{
     }
     #modal-menu{
         width: 100%;
+    }
+    .lesson-wrapper{
+        width: 60%;
+    }
+    .chars-preview-wrapper{
+        width: 75px;
     }
     @keyframes slide-right {
         from{
@@ -250,12 +313,19 @@ span{
         }
     }
 }
+
 @media screen and (max-width: 800px) {
     .virtual-keyboard-key{
         display: none;
     }
     #modal-menu{
         width: 100%;
+    }
+    .lesson-wrapper{
+        width: 80%;
+    }
+    .chars-preview-wrapper{
+        width: 50px;
     }
     @keyframes slide-right {
         from{
