--- a/styles/style.css
+++ b/styles/style.css
@@ -377,6 +377,46 @@ span{
 
 .form-input-fields-container h3{
     margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#code-information-icon{
+    margin-left: 5px;
+}
+
+#code-information-div{
+    position: absolute;
+    bottom: -140px;
+    width: 150px;
+    height: 75px;
+    background-color: #2C3333;
+    box-shadow: 3px 3px 5px #2C3333;
+    color: #E7F6F2;
+    border: 3px solid #E7F6F2;
+    border-radius: 10px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 99;
+    padding: 2px 10px;
+    font-size: 12px;
+}
+
+#incorrect-info-warning{
+    position: absolute;
+    top: -30px;
+    height: 20px;
+    width: fit-content;
+    padding: 0px 5px;
+    color: red;
+    z-index: 99;
+    width: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .form-input-fields-container input{
@@ -431,6 +471,7 @@ span{
     transition: all 300ms linear;
     margin-top: 20px;
     margin-bottom: 20px;
+    position: relative;
 }
 
 .form-submit-button:hover{
