--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ body{
 
 header{
     width: 100%;
-    padding: 30px 0;
+    padding: 40px 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -121,9 +121,21 @@ header{
 #loggin-wrapper{
     position: absolute;
     right: 10px;
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#loggin-wrapper span:hover{
+#loggin-wrapper img{
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    border: 2px solid #A5C9CA;
+    margin-left: 5px;
+}
+
+#loggin-wrapper:hover{
     cursor: pointer;
     text-decoration: underline;
 }
@@ -210,6 +222,11 @@ span{
     z-index: 3;
     opacity: 0.7;
     display: none;
+}
+
+#main-container{
+    width: 100%;
+    height: fit-content;
 }
 
 #main-content{
@@ -405,6 +422,116 @@ span{
     font-size: 12px;
 }
 
+.profile-screen-container{
+    width: 100%;
+    padding: 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+#profile-screen-photo-container{
+    position: relative;
+    width: 210px;
+    height: 210px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
+    border-radius: 100%;
+    box-shadow: 5px 5px 15px #395B64;
+}
+
+
+
+#profile-screen-photo-container:hover{
+    cursor: pointer;
+}
+
+#profile-screen-photo-container div{
+    position: absolute;
+    border-radius: 100%;
+    animation: rotate-div 4s linear infinite;
+    width: 210px;
+    height: 210px;
+    display: flex;
+    z-index: 2;
+    background: linear-gradient(to right, #2C3333, #395B64, #A5C9CA);
+}
+
+@keyframes rotate-div {
+    from{
+        rotate: 0deg;
+    }
+    to{
+        rotate: 360deg;
+    }
+}
+
+#profile-screen-photo{
+    z-index: 3;
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    object-fit: cover;
+}
+
+.profile-screen-data-container{
+    margin-bottom: 50px;
+}
+
+.profile-screen-data-container h3, h5{
+    text-align: center;
+}
+.profile-screen-data-container h5{
+    text-align: center;
+    color: red;
+    margin-top: 20px;
+}
+
+.profile-screen-data-container h5 ion-icon{
+    margin-left: 3px;
+}
+
+.profile-screen-data-container h5:hover{
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.profile-screen-data-container div{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.profile-screen-data-container div span{
+    margin-top: 10px;
+}
+
+.button{
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #2C3333;
+    color: #E7F6F2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms linear;
+    position: relative;
+}
+.button{
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#sign-out-button{
+
+}
+
 #incorrect-info-warning{
     position: absolute;
     top: -30px;
@@ -493,6 +620,45 @@ span{
     cursor: pointer;
 }
 
+#change-info-fields-modal{
+    display: none;
+    height: 200px;
+    background-color: #395B64;
+    animation: showChangeInfoModal 500ms linear;
+    position: relative;
+    border: 2px solid #2C3333;
+    box-shadow: 5px 5px 10px #2C3333;
+}
+
+#change-info-fields-modal ion-icon{
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-size: 20px;
+    color: #E7F6F2;
+}
+
+#change-info-fields-modal ion-icon:hover{
+    cursor: pointer;
+}
+
+@keyframes showChangeInfoModal {
+    from{
+        height: 0px;
+    }
+    to{
+        height: 200px;
+    }
+}
+@keyframes hideChangeInfoModal {
+    from{
+        height: 200px;
+    }
+    to{
+        height: 0px;
+    }
+}
+
 @media screen and (max-width: 1200px) {
     .virtual-keyboard-key{
         width: 30px;
@@ -562,5 +728,8 @@ span{
     }
     .form-input-fields-container{
         width: 60%;
+    }
+    #loggin-wrapper span{
+        display: none;
     }
 }
