--- a/styles/style.css
+++ b/styles/style.css
@@ -570,8 +570,6 @@ span{
     width: 100%;
     height: fit-content;
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 25px;
 }
 
@@ -663,7 +661,7 @@ span{
 }
 
 #change-info-fields-modal h3{
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
     font-weight: 200;
     color: #E7F6F2;
@@ -672,6 +670,7 @@ span{
 
 #change-info-fields-modal h4{
     margin-bottom: 5px;
+    margin-top: 5px;
     font-weight: 200;
     color: #E7F6F2;
     width: 80%;
@@ -1079,6 +1078,47 @@ ion-icon{
     border-radius: 5px;
 }
 
+.dropdown-class-picker{
+    padding: 10px 0;
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.dropdown-class-picker select{
+    background-color: #FFFFFF;
+    padding: 5px;
+    color: #395B64;
+    margin-right: 5px;
+    border-radius: 10px;
+    transition: all 300ms linear;
+    height: 40px;
+    width: 40px;
+    font-size: 12px;
+    box-shadow: 0px 0px 0px 1px #395b64;
+}
+
+.dropdown-class-picker select:hover{
+    cursor: pointer;
+}
+
+.all-homeworks-done{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.all-homeworks-done img{
+    width: 400px;
+}
+
+.all-homeworks-done span{
+    font-size: 18px;
+    font-weight: 600;
+}
 
 @keyframes showChangeInfoModal {
     from{
@@ -1156,6 +1196,12 @@ ion-icon{
     .previous-homeworks{
         width: 60%;
     }
+    .teacher-manage-pupils-wrapper{
+        width: 60%;
+    }
+    .my-pupils-container {
+        width: 60%;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -1216,6 +1262,12 @@ ion-icon{
         width: 80%;
     }
     .previous-homeworks{
+        width: 80%;
+    }
+    .teacher-manage-pupils-wrapper{
+        width: 80%;
+    }
+    .my-pupils-container {
         width: 80%;
     }
 }
